--- a/index.html
+++ b/index.html
@@ -13,6 +13,58 @@
     <title>Easybank</title>
   </head>
   <body>
-    <!-- Start Coding Here -->
+    <!-- Navigation -->
+
+    <!-- Banner -->
+
+    <!-- Feature -->
+    <div class="feature">
+      <div class="feature-container">
+        <h2 class="feature-title">Why choose Easybank?</h2>
+        <p class="feature-subtitle">
+          We leverage Open Banking to turn your bank account into your financial
+          hub.<br />
+          Control your finances like never before.
+        </p>
+        <div class="feature-box">
+          <div class="feature-content">
+            <img class="feature-icon" src="./images/icon-online.svg" />
+            <p class="feature-name">Online Banking</p>
+            <p class="feature-text">
+              Our modern web and mobile applications allow you to keep track of
+              your finances wherever you are in the world.
+            </p>
+          </div>
+          <div class="feature-content">
+            <img class="feature-icon" src="./images/icon-budgeting.svg" />
+            <p class="feature-name">Simple Budgeting</p>
+            <p class="feature-text">
+              See exactly where your money goes each month. Receive
+              notifications when you’re close to hitting your limits.
+            </p>
+          </div>
+          <div class="feature-content">
+            <img class="feature-icon" src="./images/icon-onboarding.svg" />
+            <p class="feature-name">Fast Onboarding</p>
+            <p class="feature-text">
+              We don’t do branches. Open your account in minutes online and
+              start taking control of your finances right away.
+            </p>
+          </div>
+          <div class="feature-content">
+            <img class="feature-icon" src="./images/icon-api.svg" />
+            <p class="feature-name">Open API</p>
+            <p class="feature-text">
+              Manage your savings, investments, pension, and much more from one
+              account. Tracking your money has never been easier.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Article -->
+
+    <!-- Footer -->
   </body>
 </html>
