--- a/index.html
+++ b/index.html
@@ -64,6 +64,66 @@
     </div>
 
     <!-- Article -->
+    <div class="article">
+      <div class="article-container">
+        <h2 class="article-heading">Latest Articles</h2>
+        <div class="article-list">
+          <div class="article-items">
+            <img class="article-img" src="./images/image-currency.jpg" />
+            <div class="article-content">
+              <p class="article-author-name">By Claire Robinson</p>
+              <p class="article-title">
+                Receive money in any currency with no fees
+              </p>
+              <p class="article-text">
+                The world is getting smaller and we’re becoming more mobile. So
+                why should you be forced to only receive money in a single …
+              </p>
+            </div>
+          </div>
+          <div class="article-items">
+            <img class="article-img" src="./images/image-restaurant.jpg" />
+            <div class="article-content">
+              <p class="article-author-name">By Wilson Hutton</p>
+              <p class="article-title">
+                Treat yourself without worrying about money
+              </p>
+              <p class="article-text">
+                Our simple budgeting feature allows you to separate out your
+                spending and set realistic limits each month. That means you …
+              </p>
+            </div>
+          </div>
+          <div class="article-items">
+            <img class="article-img" src="./images/image-plane.jpg" />
+            <div class="article-content">
+              <p class="article-author-name">By Claire Robinson</p>
+              <p class="article-title">
+                Take your Easybank card wherever you go
+              </p>
+              <p class="article-text">
+                We want you to enjoy your travels. This is why we don’t charge
+                any fees on purchases while you’re abroad. We’ll even show you …
+              </p>
+            </div>
+          </div>
+          <div class="article-items">
+            <img class="article-img" src="./images/image-confetti.jpg" />
+            <div class="article-content">
+              <p class="article-author-name">By Claire Robinson</p>
+              <p class="article-title">
+                Our invite-only Beta accounts are now live!
+              </p>
+              <p class="article-text">
+                After a lot of hard work by the whole team, we’re excited to
+                launch our closed beta. It’s easy to request an invite through
+                the site ...
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- Footer -->
   </body>
