--- a/index.html
+++ b/index.html
@@ -126,5 +126,38 @@
     </div>
 
     <!-- Footer -->
+    <div class="footer">
+      <div class="footer-container">
+        <div class="footer-1">
+          <div class="footer-logo-group">
+            <img class="footer-logo" src="./images/logo.svg" />
+            <span class="footer-logo-text">easybank</span>
+            <div class="footer-icon">
+              <img src="./images/icon-facebook.svg" />
+              <img src="./images/icon-youtube.svg" />
+              <img src="./images/icon-twitter.svg" />
+              <img src="./images/icon-pinterest.svg" />
+              <img src="./images/icon-instagram.svg" />
+            </div>
+          </div>
+          <div class="footer-menu">
+            <div>
+              <p>About Us</p>
+              <p>Contact</p>
+              <p>Blog</p>
+            </div>
+            <div>
+              <p>Careers</p>
+              <p>Support</p>
+              <p>Privacy Policy</p>
+            </div>
+          </div>
+        </div>
+        <div class="footer-2">
+          <button>Request Invite</button>
+          <p>© Easybank. All Rights Reserved</p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
