Add header navigation

--- a/index.html
+++ b/index.html
@@ -14,6 +14,29 @@
   </head>
   <body>
     <!-- Navigation -->
+    <div class="header">
+      <div class="header-container">
+        <div class="content-header">
+          <img class="header-logo" src="./images/logo.svg" />
+          <span class="header-logo-text">easybank</span>
+        </div>
+
+        <div class="content-header">
+          <div class="navigation">
+            <li><a href="#">home</a></li>
+            <li><a href="#">about</a></li>
+            <li><a href="#">contact</a></li>
+            <li><a href="#">blog</a></li>
+            <li><a href="#">careers</a></li>
+          </div>
+        </div>
+
+        <div class="content-header">
+          <button class="btn-header">Request Invite</button>
+        </div>
+        
+      </div>
+    </div>
 
     <!-- Banner -->
 
