--- a/index.html
+++ b/index.html
@@ -39,6 +39,17 @@
     </div>
 
     <!-- Banner -->
+    <div class="banner">
+        <div class="banner-content-left">
+          <h1>Next generation digital banking</h1>
+          <p>Take your financial life online. Your Easybank account will be a one-stop-shop
+          for spending, saving, budgeting, investing, and much more.</p>
+          <button class="btn-content-left">Request Invite</button>
+        </div>
+        <div class="banner-content-right">
+            <img src="./images/image-mockups.png" alt="image-mockups">
+        </div>
+    </div>
 
     <!-- Feature -->
     <div class="feature">
