Simplify footer css

--- a/index.html
+++ b/index.html
@@ -34,21 +34,23 @@
         <div class="content-header">
           <button class="btn-header">Request Invite</button>
         </div>
-        
       </div>
     </div>
 
     <!-- Banner -->
     <div class="banner">
-        <div class="banner-content-left">
-          <h1>Next generation digital banking</h1>
-          <p>Take your financial life online. Your Easybank account will be a one-stop-shop
-          for spending, saving, budgeting, investing, and much more.</p>
-          <button class="btn-content-left">Request Invite</button>
-        </div>
-        <div class="banner-content-right">
-            <img src="./images/image-mockups.png" alt="image-mockups">
-        </div>
+      <div class="banner-content-left">
+        <h1>Next generation digital banking</h1>
+        <p>
+          Take your financial life online. Your Easybank account will be a
+          one-stop-shop for spending, saving, budgeting, investing, and much
+          more.
+        </p>
+        <button class="btn-content-left">Request Invite</button>
+      </div>
+      <div class="banner-content-right">
+        <img src="./images/image-mockups.png" alt="image-mockups" />
+      </div>
     </div>
 
     <!-- Feature -->
@@ -172,18 +174,6 @@
               <img src="./images/icon-twitter.svg" />
               <img src="./images/icon-pinterest.svg" />
               <img src="./images/icon-instagram.svg" />
-            </div>
-          </div>
-          <div class="footer-menu">
-            <div>
-              <p>About Us</p>
-              <p>Contact</p>
-              <p>Blog</p>
-            </div>
-            <div>
-              <p>Careers</p>
-              <p>Support</p>
-              <p>Privacy Policy</p>
             </div>
           </div>
         </div>
